<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/startstopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/begin"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/ll_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/startstopButton"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/eth_ipaddr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="1dp"
            android:text="@string/str_netip"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/wifi_ipaddr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="1dp"
            android:text="@string/wifi_ipaddr"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_ip"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_cmdlineargs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />


        <TextView
            android:id="@+id/tv_lf_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/green"
            android:padding="1dp"
            android:text="@string/lf_result" />

        <TextView
            android:id="@+id/tv_hf_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/green"
            android:padding="1dp"
            android:text="@string/hf_result" />

    </LinearLayout>
</RelativeLayout>
