<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#080808">

    <TextView
        android:id="@+id/tip_check_test"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="30dip"
        android:gravity="center"
        android:textColor="#00CD00"/>

    <LinearLayout
        android:id="@+id/burnLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20pt"
            android:id="@+id/title"
            android:paddingTop="10dp"
            android:paddingLeft="200dp"
            android:paddingRight="150dp"
            android:textColor="#00CD00"
            android:text="@string/tip_normalboard"/>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:id="@+id/info_table"
            android:paddingTop="60dp"
            android:paddingLeft="200dp"
            android:paddingRight="200dp">

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="80sp"
                    android:textSize="15pt"
                    android:textColor="#00CD00"
                    android:text="@string/tip_input"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="80sp"
                    android:singleLine="true"
                    android:id="@+id/input_code"
                    android:inputType="textVisiblePassword"
                    android:textColor="#00CD00"
                    android:textSize="15pt"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="80sp"
                    android:textSize="15pt"
                    android:textColor="#00CD00"
                    android:text="@string/tip_sn"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="80sp"
                    android:singleLine="true"
                    android:id="@+id/get_sn"
                    android:inputType="textVisiblePassword"
                    android:textColor="#00CD00"
                    android:textSize="15pt"
                    android:focusable="false"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="80sp"
                    android:textSize="15pt"
                    android:textColor="#00CD00"
                    android:text="@string/tip_mac"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="80sp"
                    android:id="@+id/get_mac"
                    android:textColor="#00CD00"
                    android:inputType="textVisiblePassword"
                    android:textSize="15pt"
                    android:singleLine="true"
                    android:focusable="false"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="80sp"
                    android:textSize="15pt"
                    android:textColor="#00CD00"
                    android:text="@string/tip_burn_sn"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="80sp"
                    android:singleLine="true"
                    android:id="@+id/sn_code"
                    android:inputType="textVisiblePassword"
                    android:textColor="#00CD00"
                    android:textSize="15pt"
                    android:focusable="false"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="80sp"
                    android:textSize="15pt"
                    android:textColor="#00CD00"
                    android:text="@string/tip_burn_mac"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="80sp"
                    android:id="@+id/mac_code"
                    android:textColor="#00CD00"
                    android:textSize="15pt"
                    android:inputType="textVisiblePassword"
                    android:singleLine="true"
                    android:focusable="false"/>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingTop="15dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:id="@+id/current_status"
                android:textColor="#00CD00"
                android:textSize="18pt"
                android:singleLine="true"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>